--- a/SwissPouch/Views/Shared/_Layout.cshtml
+++ b/SwissPouch/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>                   
+                    <li>@Html.ActionLink("Utilities", "Index", "Home", new { area = "" }, null)</li>                   
                 </ul>
             </div>
         </div>
